--- a/dashgo/package.json
+++ b/dashgo/package.json
@@ -14,19 +14,24 @@
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.0",
     "framer-motion": "^5.6.0",
-    "next": "12.0.8",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.15",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.3",
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
+    "@withshepherd/faker": "^5.5.5",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
 }
